--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,12 +8,12 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "DotGothic16", sans-serif;
 }
 
 body {
   margin: 0;
+  font-size: 16px;
 }
 
 :root {
@@ -57,3 +57,4 @@ div {
 
 @import "./button.scss";
 @import "./keyboard.scss";
+@import "./display.scss";
